--- a/styles/scss/connexion.scss
+++ b/styles/scss/connexion.scss
@@ -74,8 +74,11 @@ header {
             form {
                 padding: 60px 0;
      
-                
-                .form-control {
+                label {
+                    color: #FFEED3;
+                    margin-bottom: 2px;
+                }
+                /*.form-control {
                     border: 2px solid #FFEED3;
                     box-sizing: border-box;
                     border-radius: 10px;
@@ -85,7 +88,7 @@ header {
                     font-style: normal;
                     padding: 25px;
                     font-size: 1.2em;
-                }
+                }*/
 
                 .form-check {
                     margin-top: 30px;
