--- a/styles/css/auth.css
+++ b/styles/css/auth.css
@@ -62,11 +62,12 @@ header .header-right .content .title {
   text-align: center;
 }
 header .header-right .content .form-box {
-  max-width: 550px;
+  width: 550px;
+  max-width: 100%;
   margin: 0 auto 0 0;
 }
 header .header-right .content form {
-  padding: 60px 0;
+  padding: 40px 0;
   /*.form-control {
       border: 2px solid #FFEED3;
       box-sizing: border-box;
@@ -82,6 +83,9 @@ header .header-right .content form {
 header .header-right .content form label {
   color: #FFEED3;
   margin-bottom: 2px;
+}
+header .header-right .content form .form-control {
+  font-family: Montserrat;
 }
 header .header-right .content form .form-check {
   margin-top: 30px;
@@ -112,10 +116,13 @@ header .header-right .content form .btn {
   text-align: center;
   margin: 20px auto 7px auto;
 }
+header .header-right .content form .btn.btn-login {
+  margin-top: 60px !important;
+}
 header .header-right .content form .already-accound {
   color: #FFEED3;
   text-align: center;
   font-family: "Montserrat", sans-serif;
 }
 
-/*# sourceMappingURL=connexion.css.map */
+/*# sourceMappingURL=auth.css.map */
