--- a/styles/scss/commentaires.scss
+++ b/styles/scss/commentaires.scss
@@ -19,7 +19,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 }
 
-.img1{
+.logo{
     position: absolute;
 width: 163px;
 height: 169px;
@@ -65,7 +65,7 @@ left: 80px;
 top: 337px;
 background: #E2A539;
 }
-.bob{
+.lea{
     border-radius: 50% 50%;
     margin-left: 400px;
     margin-top: 50px;
@@ -83,7 +83,7 @@ font-weight: normal;
 font-size: 36px;
 line-height: 43px;
 padding-left: 330px;
-margin-top: 50px;
+margin-top: 40px;
 
 color: #FFFFFF;
 
@@ -99,7 +99,8 @@ font-size: 21px;
 line-height: 26px;
 padding-left: 330px;
 color: #FFFFFF;
-margin-top: 50px;
+margin-top: 40px;
+text-align: justify;
 }
 .grosavisjustine{
     position: absolute;
@@ -114,7 +115,7 @@ margin-top: 50px;
     font-size: 36px;
     line-height: 43px;
     padding-left: 330px;
-    margin-top: 260px;  
+    margin-top: 210px;  
     color: #FFFFFF;
 }
 .avisjustine{
@@ -128,7 +129,8 @@ font-size: 21px;
 line-height: 26px;
 padding-left: 330px;
 color: #FFFFFF;
-margin-top: 260px;
+margin-top: 210px;
+text-align: justify;
 
 }
 
@@ -138,7 +140,7 @@ margin-top: 260px;
     margin-top: 50px;
 }
 
-.grosavissami{
+.grosavispatrick{
     position: absolute;
     width: 248px;
     height: 70px;
@@ -151,10 +153,10 @@ margin-top: 260px;
     font-size: 36px;
     line-height: 43px;
     padding-left: 330px;
-    margin-top: 450px;  
+    margin-top: 380px;  
     color: #FFFFFF;
 }
-.avissami{
+.avispatrick{
     position: absolute;
 
 left: 263px;
@@ -165,12 +167,80 @@ font-size: 21px;
 line-height: 26px;
 padding-left: 330px;
 color: #FFFFFF;
-margin-top: 450px;
+margin-top: 380px;
+text-align: justify;
 
 }
 
-.sami{
+.patrick{
     border-radius: 50% 50%;
     margin-left: 400px;
     margin-top: 50px;
 }
+
+.grosavismaxime{
+    position: absolute;
+    width: 248px;
+    height: 70px;
+    left: 263px;
+    top: 170px;
+    
+    font-family: 'Bebas Neue', cursive;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 43px;
+    padding-left: 330px;
+    margin-top: 550px;  
+    color: #FFFFFF;
+}
+.avismaxime{
+    position: absolute;
+
+left: 263px;
+top: 215px;
+
+font-family: 'Montserrat', sans-serif;
+font-size: 21px;
+line-height: 26px;
+padding-left: 330px;
+color: #FFFFFF;
+margin-top: 550px;
+
+}
+
+.maxime{
+    border-radius: 50% 50%;
+    margin-left: 400px;
+    margin-top: 50px;
+}
+
+.poubelle{
+position: absolute;
+width: 24px;
+height: 24px;
+left: 700px;
+top: 220px;
+}
+.poubelle2{
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    left: 700px;
+    top: 390px;
+    }
+.poubelle3{
+        position: absolute;
+        width: 24px;
+        height: 24px;
+        left: 700px;
+        top: 560px;
+        }
+.poubelle4{
+            position: absolute;
+            width: 24px;
+            height: 24px;
+            left: 700px;
+            top: 730px;
+            }
+        
