--- a/styles/scss/commentaires.scss
+++ b/styles/scss/commentaires.scss
@@ -4,243 +4,149 @@ body{
 h1{
     font-family: 'Bebas Neue', cursive;
     color: #FFEED3;
-    margin-left: 400px;
     padding-top: 60px;
     font-size: 64px;
 }
-header{
-position: absolute;
-width: 314px;
-height: 100%;
-left: 0px;
-background-color:#FFEED3 ;
 
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-}
-
-.logo{
-    position: absolute;
-width: 163px;
-height: 169px;
-left: 65px;
-top: 30px;
-border-radius: 121.5px;
-}
-
-nav.menu-nav ul li.btn{
-    color:#2B2B2B;
-    font-family: 'Bebas Neue', cursive;
-    font-size: 36px;
-   text-align: left;
-
-}
-ul.admin-panel-links{
-    li{
-        display: block !important;
+body.comments {
+    .row.row-comments {
+        display: flex;
+        flex-direction: row;
        
-    }
-    li:hover{
-       transform: translate(50px, 0px); 
-    }
-    li:hover a{
-        color: #E2A539;
-        
-    }
-    li:visited a{
-        color: blue;
-    }
-    padding-top: 250px;
-}
+        header{
+            position: relative;
+            width: 300px;
+            height: 100vh;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-#com{
-    transform: translate(50px, 0px);
-    color: #E2A539;
-}
-.rectangle{
-position: absolute;
-width: 4px;
-height: 25px;
-left: 80px;
-top: 337px;
-background: #E2A539;
-}
-.lea{
-    border-radius: 50% 50%;
-    margin-left: 400px;
-    margin-top: 50px;
-}
-.grosavis{
-    position: absolute;
-width: 248px;
-height: 70px;
-left: 263px;
-top: 170px;
+            .fixed-header {
+                background-color:#FFEED3 ;
+                position: fixed;
+                width: 300px;
+                height: 100vh;
+            }
 
-font-family: 'Bebas Neue', cursive;
-font-style: normal;
-font-weight: normal;
-font-size: 36px;
-line-height: 43px;
-padding-left: 330px;
-margin-top: 40px;
+            .logo{
+                position: absolute;
+                width: 163px;
+                height: 169px;
+                left: 65px;
+                top: 30px;
+                border-radius: 121.5px;
+            }
+      
 
-color: #FFFFFF;
+            nav.menu-nav ul.admin-panel-links {
+                padding-top: 250px;
+                li.btn{
+                    position: relative;
+                    padding: 0;
+                    margin: 2px 0;
+                    color:#2B2B2B;
+                    font-family: 'Bebas Neue', cursive;
+                    font-size: 36px;
+                    text-align: left;
+                    display: block !important;
+                    transform: translateX(0); 
+                    transition: 0.2s all;
 
-}
-.avis{
-    position: absolute;
+                    &:hover{
+                        transform: translateX(25px); 
+                    }
 
-left: 263px;
-top: 215px;
+                    &:hover a{
+                        color: #E2A539;
+                        
+                    }
 
-font-family: 'Montserrat', sans-serif;
-font-size: 21px;
-line-height: 26px;
-padding-left: 330px;
-color: #FFFFFF;
-margin-top: 40px;
-text-align: justify;
-}
-.grosavisjustine{
-    position: absolute;
-    width: 248px;
-    height: 70px;
-    left: 263px;
-    top: 170px;
-    
-    font-family: 'Bebas Neue', cursive;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 43px;
-    padding-left: 330px;
-    margin-top: 210px;  
-    color: #FFFFFF;
-}
-.avisjustine{
-    position: absolute;
+                    &.btn-active {
+                        transform: translateX(39px);
+                        &::before {
+                            content: "";
+                            position: absolute;
+                            display: block;
+                            height: 100%;
+                            width: 5px;
+                            left: -20px;
+                            background-color: #E2A539;
+                        }
+                    }
+                }
 
-left: 263px;
-top: 215px;
-
-font-family: 'Montserrat', sans-serif;
-font-size: 21px;
-line-height: 26px;
-padding-left: 330px;
-color: #FFFFFF;
-margin-top: 210px;
-text-align: justify;
-
-}
-
-.justine{
-    border-radius: 50% 50%;
-    margin-left: 400px;
-    margin-top: 50px;
-}
-
-.grosavispatrick{
-    position: absolute;
-    width: 248px;
-    height: 70px;
-    left: 263px;
-    top: 170px;
-    
-    font-family: 'Bebas Neue', cursive;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 43px;
-    padding-left: 330px;
-    margin-top: 380px;  
-    color: #FFFFFF;
-}
-.avispatrick{
-    position: absolute;
-
-left: 263px;
-top: 215px;
-
-font-family: 'Montserrat', sans-serif;
-font-size: 21px;
-line-height: 26px;
-padding-left: 330px;
-color: #FFFFFF;
-margin-top: 380px;
-text-align: justify;
-
-}
-
-.patrick{
-    border-radius: 50% 50%;
-    margin-left: 400px;
-    margin-top: 50px;
-}
-
-.grosavismaxime{
-    position: absolute;
-    width: 248px;
-    height: 70px;
-    left: 263px;
-    top: 170px;
-    
-    font-family: 'Bebas Neue', cursive;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 43px;
-    padding-left: 330px;
-    margin-top: 550px;  
-    color: #FFFFFF;
-}
-.avismaxime{
-    position: absolute;
-
-left: 263px;
-top: 215px;
-
-font-family: 'Montserrat', sans-serif;
-font-size: 21px;
-line-height: 26px;
-padding-left: 330px;
-color: #FFFFFF;
-margin-top: 550px;
-
-}
-
-.maxime{
-    border-radius: 50% 50%;
-    margin-left: 400px;
-    margin-top: 50px;
-}
-
-.poubelle{
-position: absolute;
-width: 24px;
-height: 24px;
-left: 700px;
-top: 220px;
-}
-.poubelle2{
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    left: 700px;
-    top: 390px;
-    }
-.poubelle3{
-        position: absolute;
-        width: 24px;
-        height: 24px;
-        left: 700px;
-        top: 560px;
-        }
-.poubelle4{
-            position: absolute;
-            width: 24px;
-            height: 24px;
-            left: 700px;
-            top: 730px;
             }
         
+
+            // .rectangle{
+            // position: absolute;
+            // width: 4px;
+            // height: 25px;
+            // left: 80px;
+            // top: 337px;
+            // background: #E2A539;
+            // }
+        }
+
+        main {
+            flex: 1;
+
+            .comment {
+                display: flex;
+                color: white;
+
+                .profil {
+                    width: 180px;
+                    text-align: center;
+
+                    .image-box {
+                        background-color: rosybrown;
+                        height: 150px;
+                        width: 150px;
+                        margin: 0 auto;
+                        border-radius: 50%;
+                        overflow: hidden;
+                        img {
+                            height: 100%;
+                            width: 100%;
+                            object-fit: cover;
+                        }
+                    }
+
+                    .name {
+                        font-family: Bebas Neue;
+                    }
+
+                }
+
+                .comment-content {
+                    flex: 1;
+
+
+                    .comment-title {
+                        display: flex;
+                        align-items: center;
+
+                        h2 {
+                            margin: 0;
+                            margin-top: 3px;
+                            font-family: Bebas Neue;
+                        }
+
+                        .icons {
+                            margin: 0 20px;
+                        }
+                    }
+
+                    p {
+                        font-family: Montserrat;
+                    }
+                }
+            }
+
+
+
+        }
+    }
+}
+
+
