--- a/styles/css/temoignage.css
+++ b/styles/css/temoignage.css
@@ -78,7 +78,7 @@ ul.admin-panel-links {
 }
 ul.admin-panel-links li {
   display: block !important;
-  padding: 10px;
+  padding: 15px;
 }
 ul.admin-panel-links li:hover {
   transform: translate(50px, 0px);
@@ -95,24 +95,25 @@ ul.admin-panel-links li:visited a {
   color: #E2A539;
 }
 
+header {
+  position: absolute;
+  position: fixed;
+  width: 314px;
+  height: 100%;
+  left: 0px;
+  top: 0px;
+  bottom: 100%;
+  background-color: #FFEED3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 .rectangle {
   position: absolute;
   width: 4px;
   height: 25px;
-  left: 130px;
-  top: 272px;
+  left: 150px;
+  top: 288px;
   background: #E2A539;
-}
-
-header {
-  position: absolute;
-  width: 314px;
-  height: 1895px;
-  left: 0px;
-  background-color: #FFEED3;
-  top: 0px;
-  bottom: 0px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 /*# sourceMappingURL=temoignage.css.map */
