--- a/styles/scss/temoignage.scss
+++ b/styles/scss/temoignage.scss
@@ -24,7 +24,6 @@ left: 65px;
 top: 30px;
 border-radius: 121.5px;
 }
-
 .stitre:before {
     content: "";
     height: 28px;
@@ -65,18 +64,17 @@ border-radius: 121.5px;
     font-size: 1.2em;
     font-weight: bold;
 }
-
 nav.menu-nav ul li.btn{
     color:#2B2B2B;
     font-family: 'Bebas Neue', cursive;
     font-size: 36px;
-   text-align: left
+   text-align: left;
 }
 ul.admin-panel-links{
     li{
-        display: block !important; 
-        padding: 10px;
-        
+        display: block !important;
+        padding: 15px;
+       
     }
     li:hover{
        transform: translate(50px, 0px); 
@@ -96,22 +94,24 @@ ul.admin-panel-links{
     transform: translate(50px, 0px);
     color: #E2A539;
 }
-.rectangle{
-position: absolute;
-width: 4px;
-height: 25px;
-left: 130px;
-top: 272px;
-background: #E2A539;
-}
-
 header{
     position: absolute;
+    position: fixed;
     width: 314px;
-    height: 1895px;
+    height: 100%;
     left: 0px;
-    background-color:#FFEED3 ;
     top: 0px;
-    bottom: 0px;
+    bottom: 100%;
+    background-color:#FFEED3 ;
+    
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-     }
+    
+    }
+    .rectangle{
+        position: absolute;
+        width: 4px;
+        height: 25px;
+        left: 150px;
+        top: 288px;
+        background: #E2A539;
+        }
