--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -26,6 +26,11 @@ section.articles {
     article.article {
         margin-top: 30px;
         margin-bottom: 30px;
+
+        & > * {
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
         
     }
 
