--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -1,7 +1,6 @@
 main {
     position: relative;
     background-color: #2B2B2B;
-    padding: 70px 0;
 
     &:before {
         content: "";
@@ -13,69 +12,18 @@ main {
         right: 0;
         clip-path: url(#courbe);
     }
-}
-section.articles {
-    
-    .section-title {
-        color: #FFEED3;
-        font-size: 3.2em;
+
+    .showmore {
         text-align: center;
-        margin-bottom: 4rem;
-    }
 
-    article.article {
-        margin-top: 30px;
-        margin-bottom: 30px;
-
-        & > * {
-            margin-top: 5px;
-            margin-bottom: 5px;
-        }
-        
-    }
-
-    article.article .article-illu {
-
-        img {
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-        }
-    }
-
-    article.article .article-content {
-        .title {
-            position: relative;
-            padding-left: 20px;
-            color: #FFEED3;
+        .btn.btn-show {
+            text-align: center;
+            background: #FFEED3;
+            border-radius: 10px;
+            color: #2B2B2B;
+            padding: 4px 45px;
             font-size: 1.4em;
-
-            &:before {
-                content: "";
-                position: absolute;
-                display: block;
-                left: 0;
-                height: 100%;
-                width: 4px;
-                background: #E2A539;
-            }
-        }
-
-        .text {
-            text-align: right;
-            p {
-                font-family: Montserrat;
-                color: white;
-                font-size: 1.1em;
-                text-align: justify;
-            }
-            .btn {
-                background: #FFEED3;
-                border-radius: 10px;
-                color: #2B2B2B;
-                padding: 4px 45px;
-              
-            }
         }
     }
+
 }
