--- a/styles/css/articles.css
+++ b/styles/css/articles.css
@@ -4,12 +4,25 @@ body {
 
 section.articles {
   padding: 70px 0;
+  text-align: center;
 }
 section.articles .section-title {
+  position: relative;
+  display: inline-block;
   color: #FFEED3;
   font-size: 3.2em;
+  line-height: 1em;
   text-align: center;
   margin-bottom: 4rem;
+}
+section.articles .section-title::before {
+  content: "";
+  position: absolute;
+  top: -4px;
+  height: 4px;
+  left: 0;
+  right: 0;
+  background-color: #E2A539;
 }
 section.articles article.article {
   margin-top: 30px;
@@ -25,6 +38,7 @@ section.articles article.article .article-illu img {
   object-fit: cover;
 }
 section.articles article.article .article-content .title {
+  text-align: left;
   position: relative;
   padding-left: 20px;
   color: #FFEED3;
@@ -50,7 +64,7 @@ section.articles article.article .article-content .text p {
 }
 section.articles article.article .article-content .text .btn {
   background: #FFEED3;
-  border-radius: 10px;
+  border-radius: 4px;
   color: #2B2B2B;
   padding: 4px 45px;
 }
