--- a/styles/scss/nav_dark.scss
+++ b/styles/scss/nav_dark.scss
@@ -9,9 +9,10 @@ nav {
             color: #000;
         }
 
-        .btn {
-            background-color: #000;
-            color: #FFEED3;
+        .btn-member {
+            a {
+                color: #000;
+            }
         }
     }
 
