--- a/styles/css/auth.css
+++ b/styles/css/auth.css
@@ -29,17 +29,31 @@ header .header-right .content {
   flex-direction: column;
 }
 header .header-right .content .title {
+  display: inline-block;
+  position: relative;
   color: #FFEED3;
   text-transform: uppercase;
   font-size: 4em;
+  line-height: 1em;
   text-align: center;
 }
+header .header-right .content .title::before {
+  content: "";
+  position: absolute;
+  top: -4px;
+  height: 4px;
+  left: 0;
+  right: 0;
+  background-color: #E2A539;
+}
 header .header-right .content .form-box {
+  text-align: center;
   width: 550px;
   max-width: 100%;
   margin: 0 auto 0 0;
 }
 header .header-right .content form {
+  text-align: left;
   padding: 40px 0;
   /*.form-control {
       border: 2px solid #FFEED3;
