--- a/styles/scss/nav.scss
+++ b/styles/scss/nav.scss
@@ -5,31 +5,22 @@ nav {
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        & > * {
-            margin: 0 5px;
-        }
-
-        .search {
-            height: 80%;
-            svg {
-                height: 100%;
-
-                path {
-                    fill: #FFEED3;
-                }
-            }
-        }
 
         .lang {
+            margin: 0 10px;
             position: relative;
             display: flex;
-            height: 20px;
+            align-items: center;
+            height: 100%;
             cursor: pointer;
 
             svg {
-                height: 100%;
+                height: 20px;
                 transform: rotate(0deg);
                 transition: all .2s;
+                path {
+                    fill: #E2A539;
+                }
             }
 
             &.grow {
@@ -37,7 +28,7 @@ nav {
                     max-width: 200px;
                     padding-left: 10px;
                     li {
-                        width: 25px;
+                        width: 20px;
                     }
                 }
 
@@ -68,7 +59,7 @@ nav {
                     }
                     a {
                         display: block;
-                        color: #FFEED3;
+                        color: #FFF;
                         font-size: 1em;
                         &:hover {
                             text-decoration: none;
@@ -78,32 +69,68 @@ nav {
             }
         }
 
-        .btn {
-            background-color: #FFEED3;
-            color: #000;
-            padding: 1px 10px;
+        .btn-member {
+            height: 100%;
+            position: relative;
+            padding: 0 14px;
+            font-size: 1em;
+
+            a {
+                display: block;
+                transition: all .2s cubic-bezier(0.215, 0.610, 0.355, 1.000);
+                transform: translateY(0);
+                color: #FFF;
+                text-decoration: none;
+            }
+
+            &:hover a {
+                transform: translateY(-4px);
+            }
+
+            &::before {
+                content: "";
+                position: absolute;
+                width: 4px;
+                right: 0;
+                top: -2px;
+                bottom: 1px;
+                background-color: #E2A539;
+                transition: all .4s;
+            }
+
         }
     }
 
     ul.links {
+        position: relative;
         padding: 0;
-        margin: 20px 0;
+        margin: 10px 0;
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
         justify-content: flex-end;
         list-style: none;
+        overflow: hidden;
+
+        span {
+            content: "";
+            position: absolute;
+            height: 2px;
+            bottom: -4px;
+            background-color: #E2A539;
+            transition: all .2s;
+        }
         li {
+            padding-left: 25px;
             a.btn {
                 padding: 0;
-                margin-left: 30px;
-                font-size: 1.6em;
+                font-size: 1.5em;
                 line-height: 1em;
-                color: #FFEED3;
+                color: #FFF;
 
 
                 &:hover {
-                    color: #FFEED3;
+                    color: #FFF;
                 }
             }
         }
